--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,23 +1,23 @@
 options:
-  logging: CLOUD_LOGGING_ONLY 
+  logging: CLOUD_LOGGING_ONLY  # Logs are stored only in Cloud Logging
 
 steps:
-  # Step 1: Build the Docker image
+  # Step 1: Build the Docker image for the Streamlit app
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'gcr.io/$PROJECT_ID/asktube:$COMMIT_SHA', '.']
+    args: ['build', '-t', 'gcr.io/$PROJECT_ID/streamlit-app:$COMMIT_SHA', '.']
 
   # Step 2: Push the image to Container Registry
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'gcr.io/$PROJECT_ID/asktube:$COMMIT_SHA']
+    args: ['push', 'gcr.io/$PROJECT_ID/streamlit-app:$COMMIT_SHA']
 
-  # Step 3: Deploy to Cloud Run
+  # Step 3: Deploy the app to Cloud Run
   - name: 'gcr.io/cloud-builders/gcloud'
     args:
       - 'run'
       - 'deploy'
-      - 'asktube'  # Replace with your Cloud Run service name if needed
+      - 'streamlit-app'  # Replace with your Cloud Run service name if needed
       - '--image'
-      - 'gcr.io/$PROJECT_ID/asktube:$COMMIT_SHA'
+      - 'gcr.io/$PROJECT_ID/streamlit-app:$COMMIT_SHA'
       - '--region'
       - 'us-central1'  # Replace with your region
       - '--platform'
@@ -25,9 +25,10 @@ steps:
       - '--quiet'
       - '--update-env-vars'
       - 'OPENAI_API_KEY=projects/$PROJECT_ID/secrets/OPENAI_API_KEY:latest'
+      - '--allow-unauthenticated'  # Allow unauthenticated access to the Streamlit app
 
 substitutions:
   _COMMIT_SHA: '${SHORT_SHA}'  # Mapping SHORT_SHA to COMMIT_SHA for consistency
 
 images:
-  - 'gcr.io/$PROJECT_ID/asktube:$COMMIT_SHA'
+  - 'gcr.io/$PROJECT_ID/streamlit-app:$COMMIT_SHA'
