--- a/requirements.txt
+++ b/requirements.txt
@@ -95,7 +95,7 @@ Pygments==2.18.0
 pypdf==4.3.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
-pywin32==306
+pywin32==306; platform_system == "Windows"
 PyYAML==6.0.2
 pyzmq==26.2.0
 referencing==0.35.1
