--- a/requirements.txt
+++ b/requirements.txt
@@ -94,6 +94,7 @@ pydeck==0.9.1
 Pygments==2.18.0
 pypdf==4.3.1
 python-dateutil==2.9.0.post0
+pytube==15.0.0
 pytz==2024.2
 pywin32==306; platform_system == "Windows"
 PyYAML==6.0.2
@@ -110,7 +111,7 @@ soupsieve==2.6
 SQLAlchemy==2.0.35
 stack-data==0.6.3
 streamlit==1.38.0
-streamlit-chat
+streamlit-chat==0.1.1
 striprtf==0.0.26
 tenacity==8.5.0
 tiktoken==0.7.0
